--- a/README.ipynb
+++ b/README.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#This is my first Jupyter README file!"
+    "#Data Science from Scratch Homework"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"cover.jpg\" title=\"Cover\" />"
    ]
   },
   {
