--- a/Ch4 Linear Algebra.ipynb
+++ b/Ch4 Linear Algebra.ipynb
@@ -52,11 +52,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With vector_sum we are really just reducing the number of vectors with add\n",
-    "so we could just do"
+    "* With vector_sum we are really just reducing the number of vectors with add so we could just do"
    ]
   },
   {
@@ -72,10 +71,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to multiply a vector by a scalar, which we do by multiplying each element by a number"
+    "* Now we need to multiply a vector by a scalar, which we do by multiplying each element by a number"
    ]
   },
   {
@@ -91,10 +90,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This allows us to compute the componentwise means of a list of (same sized) vectors"
+    "* This allows us to compute the componentwise means of a list of (same sized) vectors"
    ]
   },
   {
@@ -112,10 +111,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also get the dot product, which is the sum of two vectors componentwist products"
+    "* We can also get the dot product, which is the sum of two vectors componentwist products"
    ]
   },
   {
@@ -133,17 +132,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dot product measures how far v extends in the w direction, it is the length of the vector you'd get if you projected v onto w"
+    "* The dot product measures how far v extends in the w direction, it is the length of the vector you'd get if you projected v onto w"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using this we can compute a vectors sum mof squares"
+    "* Using this we can compute a vectors sum of squares"
    ]
   },
   {
@@ -160,10 +159,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which we can now use to compute its magnitude(or length)"
+    "* Which we can now use to compute its magnitude(or length)"
    ]
   },
   {
@@ -193,7 +192,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can combine all these pieces to compute the distance between two vectors defined as\n",
+    "* We can combine all these pieces to compute the distance between two vectors defined as"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$\\sqrt{(v_{1} - w_{1})^2  + ... +  (v_{n} - w_{n})^2}$$"
    ]
   },
@@ -223,10 +228,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which we could rewrite as:"
+    "* Which we could rewrite as:"
    ]
   },
   {
@@ -314,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if a matrix has *n* rows and *k* columns we will refer to it as a <i>n</i> x <i>k</i> matrix. We can think of each row of *n* x *k* matrix as a vextor of length *k*  and each column as a vector of length *n*"
+    "* if a matrix has *n* rows and *k* columns we will refer to it as a <i>n</i> x <i>k</i> matrix. We can think of each row of *n* x *k* matrix as a vextor of length *k*  and each column as a vector of length *n*"
    ]
   },
   {
@@ -368,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets make a matrix"
+    "* Now lets make a matrix"
    ]
   },
   {
@@ -433,7 +438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this function you can make an identity matrix, with ones on the diagonal and zeros everywhere else"
+    "* With this function you can make an identity matrix, with ones on the diagonal and zeros everywhere else"
    ]
   },
   {
@@ -503,7 +508,7 @@
    "metadata": {},
    "source": [
     "####Lets put this to work\n",
-    "from chapter one we had a bunch of different friendships:"
+    "* from chapter one we had a bunch of different friendships:"
    ]
   },
   {
@@ -522,7 +527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could also represent this as a matrix"
+    "* We could also represent this as a matrix"
    ]
   },
   {
@@ -543,7 +548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If there are few connections this is inefficient because of the amount of zeros you would have to store, however it would be much more efficient to make check connections"
+    "* If there are few connections this is inefficient because of the amount of zeros you would have to store, however it would be much more efficient to make check connections"
    ]
   },
   {
@@ -594,7 +599,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To see what friends a person has you would only need to check the column which would also be efficient"
+    "* To see what friends a person has you would only need to check the column which would also be efficient"
    ]
   },
   {
