End of stats chapter

--- a/Ch5 Statistics.ipynb
+++ b/Ch5 Statistics.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####Number of friends"
+    "###Number of friends"
    ]
   },
   {
@@ -660,6 +660,286 @@
    "metadata": {},
    "source": [
     "###Correlation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So you want to find how two things correlate and you have gotten a list of daily minutes that corresponds to the index of user and you want to see if the are related to the number of friends"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "daily_minutes = [100,60,37,39,36,31,30,37,30,30,29,25,88,23,21,18,55,15,12,10,30,10,10,9,8,5,3,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* One way of doing this is to look at **CoVariance**, which measures how two variables in tandem vary from their means"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def covariance(x, y):\n",
+    "    n = len(x)\n",
+    "    return dot(de_mean(x), de_mean(y))/(n - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "366.6693121693122"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "covariance(num_friends, daily_minutes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* So when corresponding elements are both above or below their means a positive number enters the mix, if one is abot and one is below, then a negative number enters the sum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A large positive covariance means that x tends to be large when y is large and x tends to be small when y is small, a large negative covariance means the opposite, a covariance near zero means no such relationships exist"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* This method has a couple problems: \n",
+    "    * It is difficult to tell what is meant be large, if I increase the values in one of the sets the covariance goes up, but that doesnt really reflect the data\n",
+    "    * It's units are the product of the inputs units, which can get vary confusing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For this reason it's more common to look at **Correlation** which divides out the standard deviation of both sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def correlation(x, y):\n",
+    "    stdev_x = standard_deviation(x)\n",
+    "    stdev_y = standard_deviation(y)\n",
+    "    if stdev_x > 0 and stdev_y > 0:\n",
+    "        return covariance(x, y) / stdev_x / stdev_y\n",
+    "    else:\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8012885641369815"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation(num_friends, daily_minutes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The correlation is unitless and always lies between -1 (perfect anti-correlation) and 1 (perfect correlation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* If we were to examine our data we would see that there are a couple of serious outliers, such as the guy with 25 friends spending 88 minutes, lets see what happens when he is excluded"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "outlier = num_friends.index(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(outlier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "num_friends_good = [x\n",
+    "                    for i,x in enumerate(num_friends)\n",
+    "                    if i != outlier]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "daily_minutes_good = [x\n",
+    "                      for i, x in enumerate(daily_minutes)\n",
+    "                      if i != outlier]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.802097584333349"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation(num_friends_good, daily_minutes_good)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* It only went up slightly but with bigger outliers it would be a better example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* You definitely want to investigate outliers before removing them"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Simpson's Paradox"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* This is when **confounding** variables are ignored.\n",
+    "    * A confounding variable is a dimension that is directly affecting the data you are looking into\n",
+    "    * You must *know your data*, and consider all possible confounding variables\n",
+    "    * ie your data says east coast data scientists have more friends, however when you filter further by degree you realize it is just the opposite for people with phd's "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###Other Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Just because the data doesn't have a linear relationship, it may have a different relationship"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Correlation tells you nothing about how large the relationship is, they may be perfectly correlated, but in a miniscule way"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* And of course the classic, \"Correlation is not Causation\", but its always something to consider that there may be an extra factor causing all of it. "
    ]
   },
   {
