--- a/README.ipynb
+++ b/README.ipynb
@@ -15,13 +15,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "####Notebooks are in Anaconda3-2.3.0"
+   ]
   }
  ],
  "metadata": {
